--- a/src/DepotVente/BourseBundle/Resources/views/Gestion/ficheDeposant.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Gestion/ficheDeposant.html.twig
@@ -18,7 +18,7 @@
 <section class="content">
 	<div class="wrap">
 
-		<h1>Article(s) Vendu(s)</h1>
+		<h1> {{nbArticleVendu}} Article(s) Vendu(s)</h1>
 
 		<table class="table table-condensed">
 
@@ -68,7 +68,7 @@
 <section class="content">
 	<div class="wrap">
 
-		<h1>Article(s) non Vendu(s)</h1>
+		<h1> {{nbArticleNonVendu}} Article(s) non Vendu(s)</h1>
 
 		<table class="table table-condensed">
 
