--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
                 <ul class="menu-list">
                     <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
                     <li class="menu-item"> <a href="{{ path('bourse_depotpage') }}"> Dépôt</a> </li>
-                    <li class="menu-item"> <a href="{{ path('bourse_boursepage') }}">Votre Bourses</a> </li>
+                    <li class="menu-item"> <a href="{{ path('bourse_boursepage') }}">Votre Bourse</a> </li>
                     <li class="menu-item login-item"><a href="{{ path('bourse_tableauDeBord') }}" class="btn btn-inverse btn-mini">Tableau de bord</a></li>
                 </ul>
             </nav>
